// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VProgressLinear should render component and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component and match snapshot 2`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="0"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 0%; width: 0%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 0%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component and match snapshot 3`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="100"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 100%; width: 0%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 100%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component in RTL mode 1`] = `
<div class="v-progress-linear v-progress-linear--reverse v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; right: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with buffer value and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 33%; width: 47%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with buffer value and match snapshot 2`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 33%; width: -33%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with buffer value and value > buffer value and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="90"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 90%; width: -10%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 90%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with color and background color and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-blue"
       style="opacity: 1; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-orange"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with color and background color and opacity and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-blue"
       style="opacity: 0.5; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-orange"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with color and background opacity and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-orange"
       style="opacity: 0.5; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-orange"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with color and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-orange"
       style="opacity: 0.3; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-orange"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render component with css color and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background"
       style="background-color: rgb(51, 102, 153); opacity: 0.3; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate"
         style="background-color: rgb(51, 102, 153); width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render default slot content 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="90"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 90%; width: -10%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 90%;"
    >
    </div>
  </transition-stub>
  <div class="v-progress-linear__content">
    <div class="foobar">
      content
    </div>
  </div>
</div>
`;

exports[`VProgressLinear should render inactive component and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 0px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render indeterminate progress and match snapshot 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 0%; width: 100%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__indeterminate">
      <div class="v-progress-linear__indeterminate long bg-primary">
      </div>
      <div class="v-progress-linear__indeterminate short bg-primary">
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render indeterminate progress with query prop and match snapshot 1`] = `
<div class="v-progress-linear v-progress-linear--query v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 0%; width: 100%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__indeterminate">
      <div class="v-progress-linear__indeterminate long bg-primary">
      </div>
      <div class="v-progress-linear__indeterminate short bg-primary">
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render reverse component in RTL mode 1`] = `
<div class="v-progress-linear v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; left: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;

exports[`VProgressLinear should render reversed component 1`] = `
<div class="v-progress-linear v-progress-linear--reverse v-theme--light"
     style="height: 4px;"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
>
  <div class="v-progress-linear__background bg-primary"
       style="opacity: 0.3; right: 33%; width: 67%;"
  >
  </div>
  <transition-stub>
    <div class="v-progress-linear__determinate bg-primary"
         style="width: 33%;"
    >
    </div>
  </transition-stub>
</div>
`;
